feat(user): Add login
Add /login route
Add /auth route
Add authentication documentation
